--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
-title                    : "Your Name / Site Title"
+title                    : "Liu Wang / RNA Structural Biology"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+name                     : &name "Liu Wang"
+description              : &description "Postdoctoral researcher at West China Hospital of Stomatology, Sichuan University"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://liuwang-RNA.github.io"
+baseurl                  : ""
+repository               : "liuwang-RNA/Guihub_CV"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -23,37 +23,37 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  name             : "Liu Wang"
+  pronouns         : "he/him"  
+  bio              : "Postdoc researcher focusing on RNA and RNA–protein complexes structures in bacteria, combining bioinformatics, molecular biology, and cryo-EM."
+  location         : "Chengdu, China"
+  employer         : "West China Hospital of Stomatology, Sichuan University"
+  uri              : "https://scholar.google.com/citations?hl=en&tzom=-480&user=8kjSuv8AAAAJ"
+  email            : "liuwang@scu.edu.cn" 
 
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&tzom=-480&user=8kjSuv8AAAAJ"
   inspire-hep      : # URL
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/my-orcid?orcid=0000-0003-1243-9654"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=%28%28%27Liu+Wang%27%5BAuthor%5D%29+AND+%28Sichuan+University%5BAffiliation%5D%29%29+AND+%28West+China+Hospital+of+Stomatology%5BAffiliation%5D%29&sort=date"
+  researchgate     : "https://www.researchgate.net/profile/Liu-Wang-30?ev=hdr_xprf"
   scopus           : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "https://github.com/liuwang-RNA/"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
   artstation       : # Username
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -70,7 +70,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : # LWANG_SCU
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
