--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   # Biographic information
   avatar           : "liuwang.png"
   name             : "Liu Wang"
-  pronouns         : "he/him"  
-  bio              : "Postdoc researcher focusing on RNA and RNA–protein complexes structures in bacteria, combining bioinformatics, molecular biology, and cryo-EM."
+  pronouns         : "Postdoc researcher"  
+  bio              : "My research interests focus on elucidating the 3D structures of RNA and RNA–protein complexes in bacteria associated with severe human diseases, through an integrated approach combining bioinformatics, molecular biology, and cryo-EM."
   location         : "Chengdu, China"
   employer         : "West China Hospital of Stomatology"
   uri              : "https://scholar.google.com/citations?hl=en&tzom=-480&user=8kjSuv8AAAAJ"
