--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : "Postdoc researcher"  
   bio              : "My research interests focus on elucidating the 3D structures of RNA and RNA–protein complexes in bacteria associated with severe human diseases, through an integrated approach combining bioinformatics, molecular biology, and cryo-EM."
   location         : "Chengdu, China"
-  employer         : "West China Hospital of Stomatology"
+  employer         : "Sichuan University"
   uri              : "https://scholar.google.com/citations?hl=en&tzom=-480&user=8kjSuv8AAAAJ"
   email            : "liuwang@scu.edu.cn" 
 
