--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "liuwang.png"
   name             : "Liu Wang"
-  pronouns         : "Postdoc researcher"  
+  pronouns         : "Postdoctoral researcher"  
   bio              : "My research interests focus on elucidating the 3D structures of RNA and RNA–protein complexes in bacteria associated with severe human diseases, through an integrated approach combining bioinformatics, molecular biology, and cryo-EM."
   location         : "Chengdu, China"
   employer         : "Sichuan University"
