--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@ author:
   # Biographic information
   avatar           : "liuwang.png"
   name             : "Liu Wang"
-  pronouns         : "Postdoctoral researcher"  
+  pronouns         : "Postdoctoral researcher in Sichuan University"  
   bio              : "My research interests focus on elucidating the 3D structures of RNA and RNA–protein complexes in bacteria associated with severe human diseases, through an integrated approach combining bioinformatics, molecular biology, and cryo-EM."
   location         : "Chengdu, China"
-  employer         : "Sichuan University"
+  employer         : "West China Hospital of Stomatology"
   uri              : "https://scholar.google.com/citations?hl=en&tzom=-480&user=8kjSuv8AAAAJ"
   email            : "liuwang@scu.edu.cn" 
 
