--- a/_config.yml
+++ b/_config.yml
@@ -83,9 +83,9 @@ publication_category:
   books:
     title: 'Books'
   manuscripts:
-    title: 'Journal Articles'    
+    title: 'Featured Articles'    
   conferences:
-    title: 'Conference Papers'
+    title: 'Other Articles'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
