--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,32 +1,60 @@
 journals:
   - title: "The heterogeneity of T cell infiltration in human periapical lesions"
-    authors: "Song, Y., Wang, L., Li, X., Song, H."
+    authors: "Song, Y.#, Wang, L., Li, X., Song, H.#"
     journal: "BMC Oral Health"
-    year: 2025
+    date: 2025-02-19
     doi: "10.1186/s12903-025-05621-2"
 
   - title: "Functional relevance of CASP16 nucleic acid predictions as evaluated by structure providers"
     authors: "Kretsch, RC., et al."
     journal: "bioRxiv"
-    year: 2025
+    date: 2025-04-18
     doi: "10.1101/2025.04.15.649049"
 
   - title: "Post-Treatment Apical Periodontitis: Endodontic Infection Contributes to Circulating Microbial DNA"
-    authors: "Zeng, Y., Wang, L., Wang, M., Liu, L., Song, Y., Song, D., Huang, D."
+    authors: "Zeng, Y., Wang, L., Wang, M., Liu, L., Song, Y., Song, D.#, Huang, D.#"
     journal: "Aust Endod J"
-    year: 2025
+    date: 2025-05-27
     doi: "10.1111/aej.12942"
 
   - title: "Application of Real-time Augmented Reality-guided Osteotomy and Apex Location in Endodontic Microsurgery: A Surgical Simulation Study Based on 3D-printed Alveolar Bone Model"
-    authors: "Chen, Y., Liu, L., Qiu, S., Hu, C., Wang, L., Li, Y., Tan, X., Gao, Y., Huang, D."
+    authors: "Chen, Y., Liu, L., Qiu, S., Hu, C., Wang, L., Li, Y., Tan, X., Gao, Y.#, Huang, D.#"
     journal: "J Endod"
-    year: 2023
+    date: 2023-05-19
     doi: "10.1016/j.joen.2023.05.011"
 
-  - title: "NLRP10 promotes AGEs-induced NLRP1 and NLRP3 inflammasome activation via ROS/MAPK/NF-κB signaling in human periodontal ligament cells."
-    authors: "Yi, X., Song, Y., Xu, J., Wang, L., Liu, L., Huang, D., Zhang, L."
+  - title: "NLRP10 promotes AGEs-induced NLRP1 and NLRP3 inflammasome activation via ROS/MAPK/NF-κB signaling in human periodontal ligament cells"
+    authors: "Yi, X., Song, Y., Xu, J., Wang, L., Liu, L., Huang, D., Zhang, L.#"
     journal: "Odontology"
-    year: 2024
+    date: 2023-04-12
     doi: "10.1007/s10266-023-00813-0"
 
+  - title: "Small noncoding RNA in Streptococci: From regulatory functions to drug development"
+    authors: "Yang, Y*., Wang, L.*, Liu, L., Zou, J., Huang, D.#, Li, Y.#"
+    journal: "Mol Oral Microbiol"
+    date: 2023-04-04
+    doi: "10.1111/omi.12411"
 
+  - title: "The expression of cyclic GMP–AMP synthase in human apical periodontitis: A laboratory investigation"
+    authors: "Yang, F.*, Liu, L.*, Wang, L., Ji, X., Zeng, Y., Du, J., Zhang, L.#, Huang, D.#"
+    journal: "Int Endod J"
+    date: 2023-02-27
+    doi: "10.1111/iej.13904"
+
+  - title: "The Potential Immunomodulatory Roles of Semaphorin 4D in Human Periapical Lesions"
+    authors: "Zeng, Y.*, Wang, L.*, Liu, L., Wang, M., Yan, L., Ye, L., Song, D.#, Huang, D.#"
+    journal: "J Endod"
+    date: 2022-10-15
+    doi: "10.1016/j.joen.2022.10.003"
+
+  - title: "Dissecting B/plasma cells in periodontitis at single-cell/bulk resolution"
+    authors: "Liu, L.*, Chen, Y.*, Wang, L.*, Yang, F.*, Li, X., Luo, S., Yang, L., Wang, T., Song, D.#, Huang, D.#"
+    journal: "J Dent Res"
+    date: 2022-05-26
+    doi: "10.1177/00220345221099442"
+
+  - title: "NELL1 augments osteogenesis and inhibits inflammation of human periodontal ligament stem cells induced by BMP9"
+    authors: "Wang, L., Li, X., Song, Y., Zhang, L., Ye, L., Zhou, X., Song, D.#, Huang, D.#"
+    journal: "J Periodontol"
+    date: 2022-02-03
+    doi: "10.1002/JPER.20-0517"
