--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -98,7 +98,7 @@ journals:
     doi: "10.1002/jcp.30340"
 
   - title: "The effects and potential applications of concentrated growth factor in dentin–pulp complex regeneration"
-    authors: "Li. Z, Liu, L., Wang, L., Song, D.#"
+    authors: "Li. Z., Liu, L., Wang, L., Song, D.#"
     journal: "Stem Cell Res Ther"
     date: 2021-06-19
     doi: "10.1186/s13287-021-02446-y"
