--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -61,7 +61,7 @@ journals:
     doi: "10.1002/JPER.20-0517"
 
   - title: "Wnt4 regulates bone metabolism through IKK-NF-κB and ROCK signaling under occlusal traumatic periodontitis"
-    authors: "Xu, W., et al"
+    authors: "Xu, W., et al."
     journal: "J Periodontal Res"
     date: 2022-02-08
     doi: "10.1111/jre.12975"
@@ -98,7 +98,7 @@ journals:
     doi: "10.1002/jcp.30340"
 
   - title: "The effects and potential applications of concentrated growth factor in dentin–pulp complex regeneration"
-    authors: "Li. Z., Liu, L., Wang, L., Song, D.#"
+    authors: "Li, Z., Liu, L., Wang, L., Song, D.#"
     journal: "Stem Cell Res Ther"
     date: 2021-06-19
     doi: "10.1186/s13287-021-02446-y"
