--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -86,7 +86,7 @@ journals:
     doi: "10.1016/j.joen.2021.09.016"
 
   - title: "The expression of semaphorin 7A in human periapical lesions"
-    authors: "Song, Y.#, Wang, L.#, Li, J., Yang, F., Gao, Y., Song, D., Sun, J., Ye, L., Zhang, L.#, Huang, D.#"
+    authors: "Song, Y.*, Wang, L.*, Li, J., Yang, F., Gao, Y., Song, D., Sun, J., Ye, L., Zhang, L.#, Huang, D.#"
     journal: "J Endod"
     date: 2021-06-11
     doi: "10.1016/j.joen.2021.06.005"
